fixed shwo location button and some other bugs